--- a/Days Until Seasons/Base.lproj/LaunchScreen.xib
+++ b/Days Until Seasons/Base.lproj/LaunchScreen.xib
@@ -15,55 +15,55 @@
                     <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spring" translatesAutoresizingMaskIntoConstraints="NO" id="sp5-s6-BW0">
-                    <rect key="frame" x="8" y="8" width="160" height="160"/>
+                    <rect key="frame" x="8" y="8" width="120" height="120"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="160" id="CQf-XL-Jyw"/>
-                        <constraint firstAttribute="width" constant="160" id="mIX-V0-uMj"/>
+                        <constraint firstAttribute="height" constant="120" id="SBg-Xo-R5w"/>
+                        <constraint firstAttribute="width" constant="120" id="n76-Ef-6Ii"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="summer" translatesAutoresizingMaskIntoConstraints="NO" id="EbZ-uh-Jg7">
-                    <rect key="frame" x="312" y="8" width="160" height="160"/>
+                    <rect key="frame" x="352" y="8" width="120" height="120"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="160" id="CvP-oq-EGU"/>
+                        <constraint firstAttribute="width" constant="120" id="oRb-nH-aA2"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="winter" translatesAutoresizingMaskIntoConstraints="NO" id="mab-4l-cyt">
-                    <rect key="frame" x="312" y="312" width="160" height="160"/>
+                    <rect key="frame" x="352" y="352" width="120" height="120"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="autumn" translatesAutoresizingMaskIntoConstraints="NO" id="TQr-sX-fCd">
-                    <rect key="frame" x="8" y="312" width="160" height="160"/>
+                    <rect key="frame" x="8" y="352" width="120" height="120"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="160" id="Adl-Eg-YwW"/>
+                        <constraint firstAttribute="height" constant="120" id="Yor-gp-zAD"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loop" translatesAutoresizingMaskIntoConstraints="NO" id="gCp-23-dcM">
-                    <rect key="frame" x="160" y="160" width="160" height="160"/>
+                    <rect key="frame" x="180" y="180" width="120" height="120"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="160" id="JuY-qe-Bon"/>
-                        <constraint firstAttribute="width" constant="160" id="fpX-4t-caC"/>
+                        <constraint firstAttribute="height" constant="120" id="04b-Sm-ZeV"/>
+                        <constraint firstAttribute="width" constant="120" id="PRx-YD-nYv"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="EbZ-uh-Jg7" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="3nN-db-tUN"/>
-                <constraint firstItem="EbZ-uh-Jg7" firstAttribute="top" secondItem="sp5-s6-BW0" secondAttribute="top" id="5jf-BT-AbI"/>
-                <constraint firstItem="EbZ-uh-Jg7" firstAttribute="trailing" secondItem="mab-4l-cyt" secondAttribute="trailing" id="Bfb-iJ-BIl"/>
-                <constraint firstAttribute="trailing" secondItem="6O1-Wa-bny" secondAttribute="trailing" id="MbZ-dT-jjV"/>
-                <constraint firstItem="6O1-Wa-bny" firstAttribute="centerX" secondItem="gCp-23-dcM" secondAttribute="centerX" id="OCt-Al-mHs"/>
-                <constraint firstItem="TQr-sX-fCd" firstAttribute="leading" secondItem="sp5-s6-BW0" secondAttribute="leading" id="Q8D-5a-sX1"/>
-                <constraint firstItem="sp5-s6-BW0" firstAttribute="trailing" secondItem="TQr-sX-fCd" secondAttribute="trailing" id="ZZn-Ab-l1a"/>
-                <constraint firstItem="gCp-23-dcM" firstAttribute="centerY" secondItem="6O1-Wa-bny" secondAttribute="centerY" id="bbm-M0-zDE"/>
-                <constraint firstItem="mab-4l-cyt" firstAttribute="bottom" secondItem="TQr-sX-fCd" secondAttribute="bottom" id="cPX-NT-TxK"/>
-                <constraint firstItem="EbZ-uh-Jg7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="cWD-Vl-AN8"/>
-                <constraint firstItem="6O1-Wa-bny" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="diQ-NC-Zlj"/>
-                <constraint firstItem="mab-4l-cyt" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottomMargin" id="e8E-aa-HHQ"/>
-                <constraint firstAttribute="bottom" secondItem="6O1-Wa-bny" secondAttribute="bottom" id="fCQ-83-I73"/>
-                <constraint firstItem="EbZ-uh-Jg7" firstAttribute="bottom" secondItem="sp5-s6-BW0" secondAttribute="bottom" id="i3d-bZ-tHa"/>
-                <constraint firstItem="mab-4l-cyt" firstAttribute="leading" secondItem="EbZ-uh-Jg7" secondAttribute="leading" id="n44-QS-N1h"/>
-                <constraint firstItem="6O1-Wa-bny" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="p5o-Dh-38D"/>
-                <constraint firstItem="sp5-s6-BW0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="rbf-fb-qm9"/>
-                <constraint firstItem="mab-4l-cyt" firstAttribute="top" secondItem="TQr-sX-fCd" secondAttribute="top" id="toz-l0-Peg"/>
+                <constraint firstAttribute="bottom" secondItem="6O1-Wa-bny" secondAttribute="bottom" id="1AG-so-xt2"/>
+                <constraint firstItem="TQr-sX-fCd" firstAttribute="top" secondItem="mab-4l-cyt" secondAttribute="top" id="4Si-63-pKv"/>
+                <constraint firstAttribute="trailing" secondItem="6O1-Wa-bny" secondAttribute="trailing" id="5vT-KO-bGD"/>
+                <constraint firstItem="sp5-s6-BW0" firstAttribute="bottom" secondItem="EbZ-uh-Jg7" secondAttribute="bottom" id="9Ey-H0-TTR"/>
+                <constraint firstItem="sp5-s6-BW0" firstAttribute="top" secondItem="EbZ-uh-Jg7" secondAttribute="top" id="Fav-i9-KWt"/>
+                <constraint firstItem="sp5-s6-BW0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="Ffn-Is-NI3"/>
+                <constraint firstItem="mab-4l-cyt" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottomMargin" id="GZn-0G-UuA"/>
+                <constraint firstItem="mab-4l-cyt" firstAttribute="leading" secondItem="EbZ-uh-Jg7" secondAttribute="leading" id="Lq3-lI-2sb"/>
+                <constraint firstItem="TQr-sX-fCd" firstAttribute="bottom" secondItem="mab-4l-cyt" secondAttribute="bottom" id="NXg-Pz-E5c"/>
+                <constraint firstItem="sp5-s6-BW0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="NbO-JN-Gtm"/>
+                <constraint firstItem="6O1-Wa-bny" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="V5r-HY-xOl"/>
+                <constraint firstItem="6O1-Wa-bny" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="dT8-Qe-afL"/>
+                <constraint firstItem="gCp-23-dcM" firstAttribute="centerY" secondItem="6O1-Wa-bny" secondAttribute="centerY" id="e0U-li-Z1i"/>
+                <constraint firstItem="sp5-s6-BW0" firstAttribute="trailing" secondItem="TQr-sX-fCd" secondAttribute="trailing" id="g8G-GC-bsh"/>
+                <constraint firstItem="gCp-23-dcM" firstAttribute="centerX" secondItem="6O1-Wa-bny" secondAttribute="centerX" id="iej-4x-qHX"/>
+                <constraint firstItem="EbZ-uh-Jg7" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="iir-Vc-y34"/>
+                <constraint firstItem="sp5-s6-BW0" firstAttribute="leading" secondItem="TQr-sX-fCd" secondAttribute="leading" id="pQe-ui-CHY"/>
+                <constraint firstItem="mab-4l-cyt" firstAttribute="trailing" secondItem="EbZ-uh-Jg7" secondAttribute="trailing" id="q3g-t8-Kza"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
