Adicionando Tela inicial com texto e imagens de fundo para as estacoes

--- a/Days Until Seasons/Base.lproj/Main.storyboard
+++ b/Days Until Seasons/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,65 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spring" translatesAutoresizingMaskIntoConstraints="NO" id="yAi-1a-2pC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spring_bg" translatesAutoresizingMaskIntoConstraints="NO" id="OeB-jw-nzi">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spring" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pU0-5b-p4P">
+                                <rect key="frame" x="0.0" y="40" width="600" height="96"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="128" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5Lf-GI-KPy">
+                                <rect key="frame" x="0.0" y="252" width="600" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="96" id="UrK-QD-dmQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days until Summer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tdp-XX-zfl">
+                                <rect key="frame" x="0.0" y="356" width="600" height="96"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="60"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="tdp-XX-zfl" firstAttribute="centerX" secondItem="5Lf-GI-KPy" secondAttribute="centerX" id="07q-Ol-QwX"/>
+                            <constraint firstAttribute="trailing" secondItem="yAi-1a-2pC" secondAttribute="trailing" id="2Uy-Kn-iLw"/>
+                            <constraint firstItem="yAi-1a-2pC" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="9Md-3V-Jgg"/>
+                            <constraint firstItem="OeB-jw-nzi" firstAttribute="top" secondItem="pU0-5b-p4P" secondAttribute="bottom" constant="-136" id="BOd-uO-i4E"/>
+                            <constraint firstItem="pU0-5b-p4P" firstAttribute="leading" secondItem="OeB-jw-nzi" secondAttribute="leading" id="Fmj-Xd-K8k"/>
+                            <constraint firstItem="yAi-1a-2pC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="L5r-Mp-kQZ"/>
+                            <constraint firstItem="OeB-jw-nzi" firstAttribute="trailing" secondItem="yAi-1a-2pC" secondAttribute="trailing" id="O6R-UE-OHG"/>
+                            <constraint firstItem="yAi-1a-2pC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="UEO-xF-8f2"/>
+                            <constraint firstItem="OeB-jw-nzi" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Znm-sZ-wcS"/>
+                            <constraint firstItem="5Lf-GI-KPy" firstAttribute="centerX" secondItem="OeB-jw-nzi" secondAttribute="centerX" id="c1K-ZW-PqA"/>
+                            <constraint firstItem="OeB-jw-nzi" firstAttribute="leading" secondItem="yAi-1a-2pC" secondAttribute="leading" id="f36-eX-Mb7"/>
+                            <constraint firstItem="pU0-5b-p4P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="hg6-Eq-AS3"/>
+                            <constraint firstItem="OeB-jw-nzi" firstAttribute="top" secondItem="yAi-1a-2pC" secondAttribute="top" id="jWE-Xs-VlW"/>
+                            <constraint firstItem="tdp-XX-zfl" firstAttribute="width" secondItem="5Lf-GI-KPy" secondAttribute="width" id="nvN-PT-bYz"/>
+                            <constraint firstItem="OeB-jw-nzi" firstAttribute="width" secondItem="pU0-5b-p4P" secondAttribute="width" id="qSg-HT-Ahc"/>
+                            <constraint firstItem="tdp-XX-zfl" firstAttribute="top" secondItem="5Lf-GI-KPy" secondAttribute="bottom" constant="8" id="rPW-Zw-pYV"/>
+                            <constraint firstItem="5Lf-GI-KPy" firstAttribute="width" secondItem="OeB-jw-nzi" secondAttribute="width" id="utf-Q7-o9L"/>
+                            <constraint firstItem="tdp-XX-zfl" firstAttribute="height" secondItem="5Lf-GI-KPy" secondAttribute="height" id="xFT-E4-52c"/>
+                            <constraint firstItem="5Lf-GI-KPy" firstAttribute="centerY" secondItem="OeB-jw-nzi" secondAttribute="centerY" id="yHy-zU-zbg"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="spring" width="268" height="256"/>
+        <image name="spring_bg" width="5184" height="3456"/>
+    </resources>
 </document>
