--- a/Days Until Seasons/Base.lproj/Main.storyboard
+++ b/Days Until Seasons/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,63 +20,86 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Rlj-B5-IJm">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spring" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pU0-5b-p4P">
-                                <rect key="frame" x="0.0" y="40" width="600" height="96"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Winter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IGE-QZ-DoQ">
+                                <rect key="frame" x="191" y="228" width="219" height="78"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="96" id="Q8K-e9-ncz"/>
+                                    <constraint firstAttribute="height" constant="78" id="bbd-F7-rGT"/>
+                                    <constraint firstAttribute="width" constant="219" id="kvb-mC-ULL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
                                 <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="128" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5Lf-GI-KPy">
-                                <rect key="frame" x="0.0" y="252" width="600" height="96"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="96" id="UrK-QD-dmQ"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="124" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.45000000000000001" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0QV-YH-nSm">
+                                <rect key="frame" x="129" y="314" width="134" height="95"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
                                 <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days until Summer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tdp-XX-zfl">
-                                <rect key="frame" x="0.0" y="356" width="600" height="96"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="60"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days until" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cmd-DR-0U0">
+                                <rect key="frame" x="271" y="343" width="201" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="201" id="XT2-OQ-2jr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="46"/>
+                                <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="winter" translatesAutoresizingMaskIntoConstraints="NO" id="aZL-IK-q87">
+                                <rect key="frame" x="210" y="20" width="180" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="SE9-PL-Rte"/>
+                                    <constraint firstAttribute="width" constant="180" id="hMW-oQ-Wf9"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ra3-zV-LPA">
+                                <rect key="frame" x="562" y="570" width="22" height="22"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.17254901959999999" green="0.20392156859999999" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Spring" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VzQ-Aw-LLM">
+                                <rect key="frame" x="191" y="417" width="269" height="118"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="100"/>
                                 <color key="textColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="tdp-XX-zfl" firstAttribute="centerX" secondItem="5Lf-GI-KPy" secondAttribute="centerX" id="07q-Ol-QwX"/>
-                            <constraint firstItem="pU0-5b-p4P" firstAttribute="trailing" secondItem="5Lf-GI-KPy" secondAttribute="trailing" id="DyF-Cu-OwS"/>
-                            <constraint firstAttribute="trailing" secondItem="pU0-5b-p4P" secondAttribute="trailing" id="SBe-Q5-wWf"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="leading" secondItem="tdp-XX-zfl" secondAttribute="leading" id="UKi-CD-yFm"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="centerY" secondItem="5Lf-GI-KPy" secondAttribute="centerY" id="VEx-YZ-OPr"/>
-                            <constraint firstItem="pU0-5b-p4P" firstAttribute="trailing" secondItem="5Lf-GI-KPy" secondAttribute="trailing" id="ZtI-hb-Vj2"/>
-                            <constraint firstItem="pU0-5b-p4P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="c0s-T5-fq5"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="hKK-lq-k0h"/>
-                            <constraint firstItem="pU0-5b-p4P" firstAttribute="leading" secondItem="5Lf-GI-KPy" secondAttribute="leading" id="nAc-sA-Cvu"/>
-                            <constraint firstItem="5Lf-GI-KPy" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="noz-6h-8FF"/>
-                            <constraint firstItem="tdp-XX-zfl" firstAttribute="width" secondItem="5Lf-GI-KPy" secondAttribute="width" id="nvN-PT-bYz"/>
-                            <constraint firstItem="pU0-5b-p4P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="odE-ZB-fmm"/>
-                            <constraint firstItem="pU0-5b-p4P" firstAttribute="top" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="40" id="rJC-j1-4gc"/>
-                            <constraint firstItem="tdp-XX-zfl" firstAttribute="top" secondItem="5Lf-GI-KPy" secondAttribute="bottom" constant="8" id="rPW-Zw-pYV"/>
-                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="trailing" secondItem="5Lf-GI-KPy" secondAttribute="trailing" id="tJX-7V-mBP"/>
-                            <constraint firstItem="tdp-XX-zfl" firstAttribute="height" secondItem="5Lf-GI-KPy" secondAttribute="height" id="xFT-E4-52c"/>
+                            <constraint firstItem="aZL-IK-q87" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="4tD-KM-h0a"/>
+                            <constraint firstItem="aZL-IK-q87" firstAttribute="centerX" secondItem="Rlj-B5-IJm" secondAttribute="centerX" id="5GR-vP-SQs"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9BM-Pn-xqT"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="9GQ-Vm-iGj"/>
+                            <constraint firstAttribute="trailing" secondItem="Rlj-B5-IJm" secondAttribute="trailing" id="A2f-oM-kM5"/>
+                            <constraint firstItem="0QV-YH-nSm" firstAttribute="top" secondItem="IGE-QZ-DoQ" secondAttribute="bottom" constant="8" symbolic="YES" id="Bpx-ST-89G"/>
+                            <constraint firstItem="Cmd-DR-0U0" firstAttribute="trailing" secondItem="VzQ-Aw-LLM" secondAttribute="trailing" constant="12" id="E4H-fc-091"/>
+                            <constraint firstItem="ra3-zV-LPA" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="L7c-jq-3xZ"/>
+                            <constraint firstItem="0QV-YH-nSm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="OdG-gP-jSz"/>
+                            <constraint firstItem="aZL-IK-q87" firstAttribute="centerX" secondItem="IGE-QZ-DoQ" secondAttribute="centerX" id="Opv-bR-nRT"/>
+                            <constraint firstItem="IGE-QZ-DoQ" firstAttribute="leading" secondItem="0QV-YH-nSm" secondAttribute="trailing" constant="-72" id="So6-cV-gGM"/>
+                            <constraint firstItem="IGE-QZ-DoQ" firstAttribute="top" secondItem="aZL-IK-q87" secondAttribute="bottom" constant="28" id="Zfh-N6-DyO"/>
+                            <constraint firstItem="Cmd-DR-0U0" firstAttribute="top" secondItem="IGE-QZ-DoQ" secondAttribute="bottom" constant="37" id="ebI-BX-Zfk"/>
+                            <constraint firstItem="Rlj-B5-IJm" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ev6-SN-qlu"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ra3-zV-LPA" secondAttribute="bottom" constant="8" id="iyk-dK-dk3"/>
+                            <constraint firstItem="Cmd-DR-0U0" firstAttribute="leading" secondItem="0QV-YH-nSm" secondAttribute="trailing" constant="8" symbolic="YES" id="kII-Dc-39j"/>
+                            <constraint firstItem="Cmd-DR-0U0" firstAttribute="baseline" secondItem="0QV-YH-nSm" secondAttribute="baseline" id="sIX-YP-ceq"/>
+                            <constraint firstItem="VzQ-Aw-LLM" firstAttribute="top" secondItem="Cmd-DR-0U0" secondAttribute="bottom" constant="15" id="wNw-IH-GDL"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="DyF-Cu-OwS"/>
-                                <exclude reference="rJC-j1-4gc"/>
-                            </mask>
-                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="Tmz-U4-vjJ"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1402" y="490"/>
         </scene>
     </scenes>
     <resources>
         <image name="background" width="750" height="1334"/>
+        <image name="winter" width="268" height="304"/>
     </resources>
+    <color key="tintColor" red="0.93725490199999995" green="0.94509803920000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
 </document>
